--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -7,19 +7,19 @@
   },
   "extensions": [
     "rust-lang.rust",
+    "matklad.rust-analyzer",
     "bungcip.better-toml",
     "vadimcn.vscode-lldb"
   ],
-  "forwardPorts": [
-    3000,
-    9944
-  ],
+  "forwardPorts": [3000, 9944],
   "preCreateCommand": ["cargo build", "cargo check"],
   "postStartCommand": "./target/debug/node-template --dev --ws-external",
   "menuActions": [
-    {"id": "polkadotjs",
-     "label": "Open PolkadotJS Apps",
-     "type": "external-preview",
-     "args": ["https://polkadot.js.org/apps/?rpc=wss%3A%2F%2F/$HOST/wss"]}
+    {
+      "id": "polkadotjs",
+      "label": "Open PolkadotJS Apps",
+      "type": "external-preview",
+      "args": ["https://polkadot.js.org/apps/?rpc=wss%3A%2F%2F/$HOST/wss"]
+    }
   ]
 }
