--- a/pallets/template/Cargo.toml
+++ b/pallets/template/Cargo.toml
@@ -1,12 +1,12 @@
 [package]
-authors = ['Substrate DevHub <https://github.com/substrate-developer-hub>']
+authors = ['Kresna Sucandra <https://github.com/SHA888>']
 description = 'FRAME pallet template for defining custom runtime logic.'
 edition = '2018'
 homepage = 'https://substrate.dev'
 license = 'Unlicense'
 name = 'pallet-template'
 readme = 'README.md'
-repository = 'https://github.com/substrate-developer-hub/substrate-node-template/'
+repository = 'https://github.com/SHA888/substrate-kitties-project'
 version = '3.0.0'
 
 [package.metadata.docs.rs]
