--- a/pallets/kitties/Cargo.toml
+++ b/pallets/kitties/Cargo.toml
@@ -4,26 +4,23 @@ version = "0.1.0"
 authors = ["Kresna Sucandra"]
 edition = "2018"
 
-[package.metadata.docs.rs]
-targets = ['x86_64-unknown-linux-gnu']
 
 [dependencies]
 # external dependencies
-codec = {default-features = false, features = ['derive'], package = 'parity-scale-codec', version = '2.0.0'}
+codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false }
 
 # Substrate dependencies
-frame-support = {default-features = false, version = '3.0.0', git = 'https://github.com/paritytech/substrate.git', tag = 'monthly-2021-05'}
-frame-system = {default-features = false, version = '3.0.0', git = 'https://github.com/paritytech/substrate.git', tag = 'monthly-2021-05'}
-sp-io = {default-features = false, version = '3.0.0', git = 'https://github.com/paritytech/substrate.git', tag = 'monthly-2021-05'}
-pallet-randomness-collective-flip = { default-features = false, version = "3.0.0", git = 'https://github.com/paritytech/substrate.git', tag = 'monthly-2021-05' }
+frame-support = { version = "3.0.0", default-features = false }
+frame-system = { version = "3.0.0", default-features = false }
+# sp-io = { version = "3.0.0", default-features = false }
+# pallet-randomness-collective-flip = { version = "3.0.0", default-features = false }
 
 [features]
-default = ['std']
+default = ["std"]
 std = [
-	'codec/std',
-	'frame-support/std',
-	'frame-system/std',
-	'sp-io/std',
-	'pallet-randomness-collective-flip/std',
+    "codec/std",
+    "frame-support/std",
+    "frame-system/std",
+    # "sp-io/std",
+    # "pallet-randomness-collective-flip/std",
 ]
-try-runtime = ['frame-support/try-runtime']
