--- a/runtime/Cargo.toml
+++ b/runtime/Cargo.toml
@@ -47,7 +47,7 @@ sp-version = {default-features = false, version = '3.0.0', git = 'https://github
 
 # local dependencies
 pallet-template = {default-features = false, version = '3.0.0', path = '../pallets/template'}
-pallet-kitties = {default-feature = false, version = '0.1.0', path = '../pallet/kitties'}
+pallet-kitties = {default-feature = false, path = '../pallets/kitties'}
 
 [features]
 default = ['std']
