--- a/pallets/kitties/Cargo.toml
+++ b/pallets/kitties/Cargo.toml
@@ -12,8 +12,8 @@ codec = { package = "parity-scale-codec", version = "2.0.0", default-features = 
 # Substrate dependencies
 frame-support = { version = "3.0.0", default-features = false }
 frame-system = { version = "3.0.0", default-features = false }
-# sp-io = { version = "3.0.0", default-features = false }
-# pallet-randomness-collective-flip = { version = "3.0.0", default-features = false }
+sp-io = { version = "3.0.0", default-features = false }
+pallet-randomness-collective-flip = { version = "3.0.0", default-features = false }
 
 [features]
 default = ["std"]
