--- a/runtime/Cargo.toml
+++ b/runtime/Cargo.toml
@@ -66,74 +66,74 @@ version = '2.0.0'
 
 [dependencies.frame-benchmarking]
 default-features = false
-git = 'https://github.com/paritytech/substrate.git',
-optional = true,
+git = 'https://github.com/paritytech/substrate.git'
+optional = true
 branch = 'polkadot-v0.9.8'
 version = '3.1.0'
 
 [dependencies.frame-executive]
 default-features = false
-git = 'https://github.com/paritytech/substrate.git',
+git = 'https://github.com/paritytech/substrate.git'
 branch = 'polkadot-v0.9.8'
 version = '3.0.0'
 
 [dependencies.frame-support]
 default-features = false
-git = 'https://github.com/paritytech/substrate.git',
+git = 'https://github.com/paritytech/substrate.git'
 branch = 'polkadot-v0.9.8'
 version = '3.0.0'
 
 [dependencies.frame-system]
 default-features = false
-git = 'https://github.com/paritytech/substrate.git',
+git = 'https://github.com/paritytech/substrate.git'
 branch = 'polkadot-v0.9.8'
 version = '3.0.0'
 
 [dependencies.frame-system-benchmarking]
 default-features = false
-git = 'https://github.com/paritytech/substrate.git',
-optional = true,
+git = 'https://github.com/paritytech/substrate.git'
+optional = true
 branch = 'polkadot-v0.9.8'
 version = '3.0.0'
 
 [dependencies.frame-system-rpc-runtime-api]
 default-features = false
-git = 'https://github.com/paritytech/substrate.git',
+git = 'https://github.com/paritytech/substrate.git'
 branch = 'polkadot-v0.9.8'
 version = '3.0.0'
 
 [dependencies.hex-literal]
 default-features = false
-optional = true,
+optional = true
 version = '0.3.3'
 
 [dependencies.pallet-aura]
 default-features = false
-git = 'https://github.com/paritytech/substrate.git',
+git = 'https://github.com/paritytech/substrate.git'
 branch = 'polkadot-v0.9.8'
 version = '3.0.0'
 
 [dependencies.pallet-balances]
 default-features = false
-git = 'https://github.com/paritytech/substrate.git',
+git = 'https://github.com/paritytech/substrate.git'
 branch = 'polkadot-v0.9.8'
 version = '3.0.0'
 
 [dependencies.pallet-grandpa]
 default-features = false
-git = 'https://github.com/paritytech/substrate.git',
+git = 'https://github.com/paritytech/substrate.git'
 branch = 'polkadot-v0.9.8'
 version = '3.0.0'
 
 [dependencies.pallet-randomness-collective-flip]
 default-features = false
-git = 'https://github.com/paritytech/substrate.git',
+git = 'https://github.com/paritytech/substrate.git'
 branch = 'polkadot-v0.9.8'
 version = '3.0.0'
 
 [dependencies.pallet-sudo]
 default-features = false
-git = 'https://github.com/paritytech/substrate.git',
+git = 'https://github.com/paritytech/substrate.git'
 branch = 'polkadot-v0.9.8'
 version = '3.0.0'
 
@@ -148,85 +148,85 @@ path = '../pallets/kitties'
 
 [dependencies.pallet-timestamp]
 default-features = false
-git = 'https://github.com/paritytech/substrate.git',
+git = 'https://github.com/paritytech/substrate.git'
 branch = 'polkadot-v0.9.8'
 version = '3.0.0'
 
 [dependencies.pallet-transaction-payment]
 default-features = false
-git = 'https://github.com/paritytech/substrate.git',
+git = 'https://github.com/paritytech/substrate.git'
 branch = 'polkadot-v0.9.8'
 version = '3.0.0'
 
 [dependencies.pallet-transaction-payment-rpc-runtime-api]
 default-features = false
-git = 'https://github.com/paritytech/substrate.git',
+git = 'https://github.com/paritytech/substrate.git'
 branch = 'polkadot-v0.9.8'
 version = '3.0.0'
 
 [dependencies.sp-api]
 default-features = false
-git = 'https://github.com/paritytech/substrate.git',
+git = 'https://github.com/paritytech/substrate.git'
 branch = 'polkadot-v0.9.8'
 version = '3.0.0'
 
 [dependencies.sp-block-builder]
 default-features = false
-git = 'https://github.com/paritytech/substrate.git',
+git = 'https://github.com/paritytech/substrate.git'
 branch = 'polkadot-v0.9.8'
 version = '3.0.0'
 
 [dependencies.sp-consensus-aura]
 default-features = false
-git = 'https://github.com/paritytech/substrate.git',
+git = 'https://github.com/paritytech/substrate.git'
 branch = 'polkadot-v0.9.8'
 version = '0.9.0'
 
 [dependencies.sp-core]
 default-features = false
-git = 'https://github.com/paritytech/substrate.git',
+git = 'https://github.com/paritytech/substrate.git'
 branch = 'polkadot-v0.9.8'
 version = '3.0.0'
 
 [dependencies.sp-inherents]
 default-features = false
-git = 'https://github.com/paritytech/substrate.git',
+git = 'https://github.com/paritytech/substrate.git'
 branch = 'polkadot-v0.9.8'
 version = '3.0.0'
 
 [dependencies.sp-offchain]
 default-features = false
-git = 'https://github.com/paritytech/substrate.git',
+git = 'https://github.com/paritytech/substrate.git'
 branch = 'polkadot-v0.9.8'
 version = '3.0.0'
 
 [dependencies.sp-runtime]
 default-features = false
-git = 'https://github.com/paritytech/substrate.git',
+git = 'https://github.com/paritytech/substrate.git'
 branch = 'polkadot-v0.9.8'
 version = '3.0.0'
 
 [dependencies.sp-session]
 default-features = false
-git = 'https://github.com/paritytech/substrate.git',
+git = 'https://github.com/paritytech/substrate.git'
 branch = 'polkadot-v0.9.8'
 version = '3.0.0'
 
 [dependencies.sp-std]
 default-features = false
-git = 'https://github.com/paritytech/substrate.git',
+git = 'https://github.com/paritytech/substrate.git'
 branch = 'polkadot-v0.9.8'
 version = '3.0.0'
 
 [dependencies.sp-transaction-pool]
 default-features = false
-git = 'https://github.com/paritytech/substrate.git',
+git = 'https://github.com/paritytech/substrate.git'
 branch = 'polkadot-v0.9.8'
 version = '3.0.0'
 
 [dependencies.sp-version]
 default-features = false
-git = 'https://github.com/paritytech/substrate.git',
+git = 'https://github.com/paritytech/substrate.git'
 branch = 'polkadot-v0.9.8'
 version = '3.0.0'
 
